<resources>
    <string name="app_name">Employee</string>
    <string name="save">save</string>
    <string name="nameHint">Name …</string>
    <string name="idHint">ID …</string>
    <string name="genderHint">Gender …</string>
    <string name="salaryHint">Salary …</string>
    <string name="salesHint">Sales …</string>
    <string name="commissionHint">Commission …</string>
    <string name="icon_warning">icon warning</string>
    <string name="message_delete_dialog">are you sure to remove</string>
    <string name="description_icon_person">image for person (male of female)</string>
    <string name="name_demo">Akram assi</string>
    <string name="id_icon">id_icon</string>
    <string name="id_demo">12555943</string>
    <string name="icon_gender">iconGender</string>
    <string name="gender_demo">mele</string>
    <string name="rate_demo">0.123</string>
    <string name="salary_demo">3440</string>
    <string name="salary_icon">salary_icon</string>
    <string name="delete_icon">delete_icon</string>
    <string name="sales_icon">sales_icon</string>
    <string name="sales_demo">102344</string>
    <string name="rate_icon">rate_icon</string>
    <string name="edit_icon">edit icon</string>
    <string name="title_activity_search">searchActivity</string>
    <string name="id_search">Enter ID …</string>
    <string name="name_search">Enter Name …</string>

    <string-array name="numbers">
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="home">Home</string>
    <string name="no_data">No Data</string>
    <string name="descrip_showButton">icon for show search choice</string>
    <string name="descrip_search_button">icon for search Button</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="descrip_insertbutton">icon for insertButton</string>
    <string name="icon_employee_left">icon employee left</string>
    <string name="icon_employee_right">icon employee right</string>
    <string name="icon_employee_top">icon employee top</string>
    <string name="design">Design by akram</string>
</resources>