<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/insertView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/bottom_sheat"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/insertSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:text="@string/save"
                android:textColor="@color/illuminatingEmerald"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/helvetica_oblique"
                android:hint="@string/nameHint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/illuminatingEmerald"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/idEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/helvetica_oblique"
                android:hint="@string/idHint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/illuminatingEmerald"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/genderEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/transparent"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/salaryEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/helvetica_oblique"
                android:hint="@string/salaryHint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/illuminatingEmerald"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/salesEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/helvetica_oblique"
                android:hint="@string/salesHint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/illuminatingEmerald"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/CommissionEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/helvetica_oblique"
                android:hint="@string/commissionHint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/illuminatingEmerald"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>